# assignment-2

./: .gitignore  README.md  pyproject.toml  test.py
ci_server/: GitHub_API_functions.py  __init__.py  __main__.py  ci_logic.py  ci_runner.py  logger.py  server.py  test_GitHub_API_functions.py  test_runner.py  tests.py
doc/: README.md  logging.md
doc/source/: index.rst  modules.rst
docs/: GitHubAPI.md  README.md
docs/source/: ci_server.rst  conf.py  modules.rst  test_ci_server.rst  test_runner.rst
test_ci_server/: test_GitHub_API_functions.py  test_ci.py  test_compilation.py  test_compile.py  test_logger.py  test_server.py
test_runner/: __main__.py
